--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_base.scss
@@ -169,3 +169,7 @@ input[type="search"]::-webkit-search-decoration {
     border-left: 5px solid#BFC1C3;
     padding:12px 0 1px 15px;  
  }
+
+ legend {
+    float: none !important;
+ }
