--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
@@ -123,12 +123,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="global-header-bar"></div>
     <div id="content" role="main" tabindex="-1">      
         <main id="main">
-            <div class="phase-banner sfa-navigation">
-                <p>
-                    <strong class="phase-tag">BETA</strong>
-                    <span>You can help us improve this app by completing our <a href="https://www.surveymonkey.co.uk/r/2MZRS9H">5 minute survey</a>.</span>
-                </p>
-                @Html.Partial("_LoginPartial")
+            <div class="phase-banner sfa-navigation-wrapper">
+                <div class="grid-row">
+                    <div class="column-half">
+                        <p>
+                            <strong class="phase-tag">BETA</strong>
+                            <span>You can help us improve this app by completing our <a href="https://www.surveymonkey.co.uk/r/2MZRS9H">5 minute survey</a>.</span>
+                        </p>
+                    </div>
+                    <div class="column-half sfa-navigation">
+                        @Html.Partial("_LoginPartial")
+                    </div>
+                </div>
             </div>  
             @{
                 var controller = ViewContext.Controller as SFA.Apprenticeships.Web.Common.Controllers.ControllerBase;
