--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
@@ -3,23 +3,21 @@
 
 @if (Request.IsAuthenticated)
 {
-    <div class="sfa-navigation-items">
+    <div class="sfa-user-navigation">
         <a id="signout-link" href="@Url.RouteUrl(RecruitmentRouteNames.SignOut)"><i class="fa fa-sign-out"></i>Sign out</a>
-        <div>
-            @if (User.IsInRole(Roles.Admin))
-            {
-                <a class="account-link" id="adminLink" href="@Url.RouteUrl(RecruitmentRouteNames.AdminList)">Admin</a>
-            }
-            @if (User.IsInRole(Roles.VerifiedEmail) && (ViewBag.ShowHomeLink == null || ViewBag.ShowHomeLink))
-            {
-                <a class="account-link" id="applicationsLink" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Home</a>
-            }
-        </div>
+    </div>
+    <div class="sfa-navigation-items">
+        @if (User.IsInRole(Roles.Admin))
+        {
+            <a id="adminLink" href="@Url.RouteUrl(RecruitmentRouteNames.AdminList)">Admin</a>
+        }
+        @if (User.IsInRole(Roles.VerifiedEmail) && (ViewBag.ShowHomeLink == null || ViewBag.ShowHomeLink))
+        {
+            <a id="applicationsLink" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Home</a>
+        }
     </div>
 }
 else
 {
-    <div class="sfa-navigation-items">
-        <a href="@Url.RouteUrl(RecruitmentRouteNames.SignIn)" id="loginLink" title="Sign in / Create account"><i class="fa fa-sign-in"></i>Sign in / Create account</a>
-    </div>    
+    <a href="@Url.RouteUrl(RecruitmentRouteNames.SignIn)" id="loginLink" title="Sign in / Create account"><i class="fa fa-sign-in"></i>Sign in / Create account</a>
 }
