--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/styles.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/styles.css
@@ -103,6 +103,21 @@ i.fa {
   margin-right: .3em; }
 
 /* -------------------------------------------------------------------
+Custom form elements
+------------------------------------------------------------------- */
+.sfa-input-auto-width {
+  margin-bottom: 5px; }
+  @media (min-width: 641px) {
+    .sfa-input-auto-width {
+      margin-bottom: 0px;
+      width: auto !important; } }
+
+.browsetab, .searchtab {
+  display: none !important; }
+  .browsetab.active, .searchtab.active {
+    display: inline-block !important; }
+
+/* -------------------------------------------------------------------
 Misc - TO BE ORGANISED
 ------------------------------------------------------------------- */
 .force-full-width {
