--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -9,22 +9,27 @@
 <html lang="en-GB" class="no-js not-ie8">
 <!--<![endif]-->
 <head>
-@if (ViewBag.EnableGoogleTagManager)
-{
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','@ViewBag.GoogleContainerId');</script>
-<!-- End Google Tag Manager -->
-}
+    @if (ViewBag.EnableGoogleTagManager)
+    {
+        <!-- Google Tag Manager -->
+        <script>
+            (function (w, d, s, l, i) {
+                w[l] = w[l] || []; w[l].push({
+                    'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+                }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+            })(window, document, 'script', 'dataLayer', '@ViewBag.GoogleContainerId');</script>
+        <!-- End Google Tag Manager -->
+    }
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>@ViewBag.Title</title>
     <meta name="description" content="We’ve introduced a new way to recruit an apprentice in England.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
+
     <!--[if gt IE 8]><!-->@Styles.Render("~/Content/_assets/styles/not-ie8")<!--<![endif]-->
     <!--[if lte IE 8]>@Styles.Render("~/Content/_assets/styles/ie8")<![endif]-->
     @RenderSection("metatags", false)
@@ -33,22 +38,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="apple-touch-icon-precomposed" sizes="120x120" href="@Url.CdnImage("apple-touch-icon-120x120.png")">
     <link rel="apple-touch-icon-precomposed" sizes="76x76" href="@Url.CdnImage("apple-touch-icon-76x76.png")">
     <link rel="apple-touch-icon-precomposed" href="@Url.CdnImage("apple-touch-icon-60x60.png")">
-    
+
     @Scripts.Render("~/bundles/webtrends")
     @Styles.Render("~/bundles/font-awesome")
-@if (ViewBag.EnableAppInsights)
-{
-<script type="text/javascript">
-  var appInsights=window.appInsights||function(config){
-    function i(config){t[config]=function(){var i=arguments;t.queue.push(function(){t[config].apply(t,i)})}}var t={config:config},u=document,e=window,o="script",s="AuthenticatedUserContext",h="start",c="stop",l="Track",a=l+"Event",v=l+"Page",y=u.createElement(o),r,f;y.src=config.url||"https://az416426.vo.msecnd.net/scripts/a/ai.0.js";u.getElementsByTagName(o)[0].parentNode.appendChild(y);try{t.cookie=u.cookie}catch(p){}for(t.queue=[],t.version="1.0",r=["Event","Exception","Metric","PageView","Trace","Dependency"];r.length;)i("track"+r.pop());return i("set"+s),i("clear"+s),i(h+a),i(c+a),i(h+v),i(c+v),i("flush"),config.disableExceptionTracking||(r="onerror",i("_"+r),f=e[r],e[r]=function(config,i,u,e,o){var s=f&&f(config,i,u,e,o);return s!==!0&&t["_"+r](config,i,u,e,o),s}),t
-    }({
-        instrumentationKey:"@ViewBag.AppInsightsInstrumentationKey"
-    });
-      
-    window.appInsights=appInsights;
-    appInsights.trackPageView();
-</script>
-}
+    @if (ViewBag.EnableAppInsights)
+    {
+        <script type="text/javascript">
+            var appInsights = window.appInsights || function (config) {
+                function i(config) { t[config] = function () { var i = arguments; t.queue.push(function () { t[config].apply(t, i) }) } } var t = { config: config }, u = document, e = window, o = "script", s = "AuthenticatedUserContext", h = "start", c = "stop", l = "Track", a = l + "Event", v = l + "Page", y = u.createElement(o), r, f; y.src = config.url || "https://az416426.vo.msecnd.net/scripts/a/ai.0.js"; u.getElementsByTagName(o)[0].parentNode.appendChild(y); try { t.cookie = u.cookie } catch (p) { } for (t.queue = [], t.version = "1.0", r = ["Event", "Exception", "Metric", "PageView", "Trace", "Dependency"]; r.length;) i("track" + r.pop()); return i("set" + s), i("clear" + s), i(h + a), i(c + a), i(h + v), i(c + v), i("flush"), config.disableExceptionTracking || (r = "onerror", i("_" + r), f = e[r], e[r] = function (config, i, u, e, o) { var s = f && f(config, i, u, e, o); return s !== !0 && t["_" + r](config, i, u, e, o), s }), t
+            }({
+                instrumentationKey: "@ViewBag.AppInsightsInstrumentationKey"
+            });
+
+            window.appInsights = appInsights;
+            appInsights.trackPageView();
+        </script>
+    }
     @Html.Partial("_Scripts")
 </head>
 <body>
@@ -63,8 +68,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     @if (ViewBag.EnableGoogleTagManager)
     {
 	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="@("https://www.googletagmanager.com/ns.html?id=" + ViewBag.GoogleContainerId)"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <noscript>
+            <iframe src="@("https://www.googletagmanager.com/ns.html?id=" + ViewBag.GoogleContainerId)"
+                    height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        </noscript>
 	<!-- End Google Tag Manager (noscript) -->
     }
 
@@ -180,45 +187,45 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <footer class="group js-footer" id="footer" role="contentinfo">
         <div class="footer-wrapper">
             @*<div class="footer-categories">
-                <div class="footer-explore">
-                    <h2>Services and information</h2>
+                    <div class="footer-explore">
+                        <h2>Services and information</h2>
 
-                    <ul>
-                        <li><a href="/browse/benefits">Benefits</a></li>
-                        <li><a href="/browse/births-deaths-marriages">Births, deaths, marriages and care</a></li>
-                        <li><a href="/browse/business">Business and self-employed</a></li>
-                        <li><a href="/browse/childcare-parenting">Childcare and parenting</a></li>
-                        <li><a href="/browse/citizenship">Citizenship and living in the UK</a></li>
-                        <li><a href="/browse/justice">Crime, justice and the law</a></li>
-                        <li><a href="/browse/disabilities">Disabled people</a></li>
-                        <li><a href="/browse/driving">Driving and transport</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href="/browse/education">Education and learning</a></li>
-                        <li><a href="/browse/employing-people">Employing people</a></li>
-                        <li><a href="/browse/environment-countryside">Environment and countryside</a></li>
-                        <li><a href="/browse/housing-local-services">Housing and local services</a></li>
-                        <li><a href="/browse/tax">Money and tax</a></li>
-                        <li><a href="/browse/abroad">Passports, travel and living abroad</a></li>
-                        <li><a href="/browse/visas-immigration">Visas and immigration</a></li>
-                        <li><a href="/browse/working">Working, jobs and pensions</a></li>
-                    </ul>
-                </div>
+                        <ul>
+                            <li><a href="/browse/benefits">Benefits</a></li>
+                            <li><a href="/browse/births-deaths-marriages">Births, deaths, marriages and care</a></li>
+                            <li><a href="/browse/business">Business and self-employed</a></li>
+                            <li><a href="/browse/childcare-parenting">Childcare and parenting</a></li>
+                            <li><a href="/browse/citizenship">Citizenship and living in the UK</a></li>
+                            <li><a href="/browse/justice">Crime, justice and the law</a></li>
+                            <li><a href="/browse/disabilities">Disabled people</a></li>
+                            <li><a href="/browse/driving">Driving and transport</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="/browse/education">Education and learning</a></li>
+                            <li><a href="/browse/employing-people">Employing people</a></li>
+                            <li><a href="/browse/environment-countryside">Environment and countryside</a></li>
+                            <li><a href="/browse/housing-local-services">Housing and local services</a></li>
+                            <li><a href="/browse/tax">Money and tax</a></li>
+                            <li><a href="/browse/abroad">Passports, travel and living abroad</a></li>
+                            <li><a href="/browse/visas-immigration">Visas and immigration</a></li>
+                            <li><a href="/browse/working">Working, jobs and pensions</a></li>
+                        </ul>
+                    </div>
 
-                <div class="footer-inside-government">
-                    <h2>Departments and policy</h2>
+                    <div class="footer-inside-government">
+                        <h2>Departments and policy</h2>
 
-                    <ul>
-                        <li><a href="/government/how-government-works">How government works</a></li>
-                        <li><a href="/government/organisations">Departments</a></li>
-                        <li><a href="/government/world">Worldwide</a></li>
-                        <li><a href="/government/policies">Policies</a></li>
-                        <li><a href="/government/publications">Publications</a></li>
-                        <li><a href="/government/announcements">Announcements</a></li>
-                    </ul>
-                </div>
-                <hr>
-            </div>*@
+                        <ul>
+                            <li><a href="/government/how-government-works">How government works</a></li>
+                            <li><a href="/government/organisations">Departments</a></li>
+                            <li><a href="/government/world">Worldwide</a></li>
+                            <li><a href="/government/policies">Policies</a></li>
+                            <li><a href="/government/publications">Publications</a></li>
+                            <li><a href="/government/announcements">Announcements</a></li>
+                        </ul>
+                    </div>
+                    <hr>
+                </div>*@
 
             <div class="footer-meta">
                 <div class="footer-meta-inner">
